--- a/android-common/build.gradle
+++ b/android-common/build.gradle
@@ -36,4 +36,7 @@ dependencies {
 
     api 'com.google.dagger:dagger:2.25.2'
     kapt 'com.google.dagger:dagger-compiler:2.25.2'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
