--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -79,4 +79,6 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:1.2.5")
 
     implementation project(':android-common')
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
