--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,10 @@ dependencies {
 
     implementation project(':mylibrary')
     implementation project(':android-common')
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.3.61"
+    testImplementation "org.mockito:mockito-inline:3.2.4"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 }
