--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,6 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.3.61"
     testImplementation "org.mockito:mockito-inline:3.2.4"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+
+    implementation("com.google.android.gms:play-services-location:17.0.0")
 }
