--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
 
     implementation("androidx.fragment:fragment-ktx:1.2.5")
 
-    implementation project(':mylibrary')
+    implementation project(':news')
     implementation project(':android-common')
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
