--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
-//    viewBinding.enabled = true
     buildFeatures {
         viewBinding = true
     }
@@ -82,12 +81,12 @@ dependencies {
 
     implementation project(':news')
     implementation project(':android-common')
+//    implementation project(':app.ericn.ericsweather.location')
+    implementation("com.google.android.gms:play-services-location:17.0.0")
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.3.61"
     testImplementation "org.mockito:mockito-inline:3.2.4"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-
-    implementation("com.google.android.gms:play-services-location:17.0.0")
 }
