--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,8 @@ dependencies {
 
     implementation project(':news')
     implementation project(':android-common')
-//    implementation project(':app.ericn.ericsweather.location')
-    implementation("com.google.android.gms:play-services-location:17.0.0")
+    implementation project(':location')
+//    implementation("com.google.android.gms:play-services-location:17.0.0")
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
