--- a/news/build.gradle
+++ b/news/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:1.2.5")
 
     implementation project(':android-common')
+    implementation project(':location')
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
