Fixed rotation issue - handleLocationPermission is wrongly called again

--- a/location/src/main/AndroidManifest.xml
+++ b/location/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="app.ericn.app.ericn.ericsweather.location">
-</manifest>
+<manifest package="app.ericn.app.ericn.ericsweather.location"></manifest>
