--- a/android-common/src/main/AndroidManifest.xml
+++ b/android-common/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="app.ericn.android_common">
+<manifest package="app.ericn.android_common">
 
     /
 </manifest>
