--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="app.ericn.mynews">
+<manifest package="app.ericn.mynews">
 
     /
 </manifest>
