--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.5'
+        classpath "com.bugsnag:bugsnag-android-gradle-plugin:5.+"
     }
 }
 
