--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         rxAndroidVersion = '2.1.1'
         rxJavaVersion = '2.2.19'
         rxKotlinVersion = '2.4.0'
+        daggerVersion = '2.40.5'
     }
 
     repositories {
@@ -16,10 +17,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.5'
         classpath "com.bugsnag:bugsnag-android-gradle-plugin:5.+"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
     }
 }
 
